# tenzor_testovoe

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
configs/: common.py  config_first_scenario.py  config_scenarios.py  config_second_scenario.py  logging.py
scenarios/: base.py  first_scenario.py  second_scenario.py  third_scenario.py
tests/: driver.py  test_first_scenario.py  test_second_scenario.py  test_third_scenario.py
utils/: utils.py
